@@ -1,3 +1,8 @@
+2006-09-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Syntactic sugar in form of "length", "show" and "summary"
+	operators
+
 2006-08-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Diverse updates. Mainly on default operators ("[" or "c")
